--- a/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
@@ -232,7 +232,7 @@ spec:
                       backends:
 
                       1. Hostname MUST be used as the SNI to connect to the backend (RFC 6066).
-                      2. If SubjectAltNames is not specified or unsupported, Hostname MUST be used for
+                      2. Hostname MUST be used for authentication and MUST match the certificate served by the matching backend, unless SubjectAltNames is specified.
                          authentication and MUST match the certificate served by the matching
                          backend.
 
@@ -244,7 +244,7 @@ spec:
                   subjectAltNames:
                     description: |-
                       SubjectAltNames contains one or more Subject Alternative Names.
-                      When specified, if supported, the certificate served from the backend MUST
+                      When specified the certificate served from the backend MUST
                       have at least one Subject Alternate Name matching one of the specified SubjectAltNames.
 
                       Support: Extended
