--- a/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
@@ -232,7 +232,7 @@ spec:
                       backends:
 
                       1. Hostname MUST be used as the SNI to connect to the backend (RFC 6066).
-                      2. If SubjectAltNames is not specified, Hostname MUST be used for
+                      2. Hostname MUST be used for authentication and MUST match the certificate served by the matching backend, unless SubjectAltNames is specified.
                          authentication and MUST match the certificate served by the matching
                          backend.
 
@@ -244,10 +244,10 @@ spec:
                   subjectAltNames:
                     description: |-
                       SubjectAltNames contains one or more Subject Alternative Names.
-                      When specified, the certificate served from the backend MUST have at least one
-                      Subject Alternate Name matching one of the specified SubjectAltNames.
+                      When specified the certificate served from the backend MUST
+                      have at least one Subject Alternate Name matching one of the specified SubjectAltNames.
 
-                      Support: Core
+                      Support: Extended
                     items:
                       description: SubjectAltName represents Subject Alternative Name.
                       properties:
