add a blurb about listener conflict

--- a/config/crd/experimental/gateway.networking.x-k8s.io_listenersets.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_listenersets.yaml
@@ -65,11 +65,24 @@ spec:
                   Listeners in a `Gateway` and their attached `ListenerSets` are concatenated
                   as a list when programming the underlying infrastructure.
 
-                  Listeners should be merged using the following precedence:
+                  Implementations MUST treat the parent Gateway as having the merged
+                  list of all listeners from itself and attached ListenerSets using
+                  the following precendence:
 
                   1. "parent" Gateway
                   2. ListenerSet ordered by creation time (oldest first)
                   3. ListenerSet ordered alphabetically by “{namespace}/{name}”.
+
+                  An implementation MAY reject listeners by setting the ListenerEntryStatus
+                  `Accepted`` condition to False with the Reason `TooManyListeners`
+
+                  If a listener has a conflict, this will be reported in the
+                  Status.ListenerEntryStatus setting the `Conflicted` condition to True.
+
+                  Implementations SHOULD be cautious about what information from the
+                  parent or siblings are reported to avoid accidentally leaking
+                  sensitive information that the child would not otherwise have access
+                  to. This can include contents of secrets etc.
                 items:
                   properties:
                     allowedRoutes:
@@ -251,7 +264,7 @@ spec:
                     name:
                       description: |-
                         Name is the name of the Listener. This name MUST be unique within a
-                        Gateway.
+                        ListenerSet.
 
                         Support: Core
                       maxLength: 253
