change use of ListenerSet conditions to a MUST requirement

--- a/config/crd/experimental/gateway.networking.x-k8s.io_listenersets.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_listenersets.yaml
@@ -612,8 +612,8 @@ spec:
                 description: |-
                   Conditions describe the current conditions of the ListenerSet.
 
-                  Implementations should prefer to express ListenerSet conditions
-                  using the `ListenerSetConditionType` and `ListenerSetConditionReason`
+                  Implementations MUST express ListenerSet conditions using the
+                  `ListenerSetConditionType` and `ListenerSetConditionReason`
                   constants so that operators and tools can converge on a common
                   vocabulary to describe ListenerSet state.
 
