--- a/config/crd/experimental/gateway.networking.x-k8s.io_listenersets.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_listenersets.yaml
@@ -69,7 +69,7 @@ spec:
 
                   Implementations MUST treat the parent Gateway as having the merged
                   list of all listeners from itself and attached ListenerSets using
-                  the following precendence:
+                  the following precedence:
 
                   1. "parent" Gateway
                   2. ListenerSet ordered by creation time (oldest first)
