Implementation of GEP-3567 - TLS Updates for Connection Coalescing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -141,6 +141,7 @@ nav:
       - geps/gep-2649/index.md
       - geps/gep-3155/index.md
       - geps/gep-3171/index.md
+      - geps/gep-3567/index.md
     - Standard:
       - geps/gep-709/index.md
       - geps/gep-718/index.md
