parentRef is not optional

--- a/config/crd/experimental/gateway.networking.x-k8s.io_listenersets.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_listenersets.yaml
@@ -581,6 +581,7 @@ spec:
                 type: object
             required:
             - listeners
+            - parentRef
             type: object
           status:
             default:
