add a note about Gateway Listener list MAY drop MinItems=1 requirement

--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -518,6 +518,8 @@ spec:
                   Implementations MAY merge separate Gateways onto a single set of
                   Addresses if all Listeners across all Gateways are compatible.
 
+                  In a future release the MinItems=1 requirement MAY be dropped.
+
                   Support: Core
                 items:
                   description: |-
@@ -1790,6 +1792,8 @@ spec:
 
                   Implementations MAY merge separate Gateways onto a single set of
                   Addresses if all Listeners across all Gateways are compatible.
+
+                  In a future release the MinItems=1 requirement MAY be dropped.
 
                   Support: Core
                 items:
