drop 'Support: Core' from the listener set go types

--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -166,10 +166,8 @@ spec:
                       selector:
                         description: |-
                           Selector must be specified when From is set to "Selector". In that case,
-                          only Routes in Namespaces matching this Selector will be selected by this
+                          only ListenerSets in Namespaces matching this Selector will be selected by this
                           Gateway. This field is ignored for other values of "From".
-
-                          Support: Core
                         properties:
                           matchExpressions:
                             description: matchExpressions is a list of label selector
@@ -1486,10 +1484,8 @@ spec:
                       selector:
                         description: |-
                           Selector must be specified when From is set to "Selector". In that case,
-                          only Routes in Namespaces matching this Selector will be selected by this
+                          only ListenerSets in Namespaces matching this Selector will be selected by this
                           Gateway. This field is ignored for other values of "From".
-
-                          Support: Core
                         properties:
                           matchExpressions:
                             description: matchExpressions is a list of label selector
